# databend

./: Cargo.toml
common/datavalues/src/: data_value.rs
common/datavalues/src/columns/primitive/: mod.rs
common/datavalues/src/types/: data_type.rs  mod.rs  type_decimal.rs  type_factory.rs  type_id.rs
common/datavalues2/src/types/: type_id.rs
common/exception/: Cargo.toml
common/flight-rpc/: Cargo.toml
common/functions/src/scalars/udfs/: sleep.rs
common/meta/api/: Cargo.toml
common/meta/embedded/: Cargo.toml
common/meta/flight/: Cargo.toml
common/meta/raft-store/: Cargo.toml
common/meta/sled-store/: Cargo.toml
metasrv/: Cargo.toml
query/: Cargo.toml
query/tests/it/servers/http/: http_query_handlers.rs
src/common/io/src/: utils.rs
src/common/io/tests/it/: utils.rs
src/common/storage/: Cargo.toml
src/common/storage/src/: column_node_v2.rs  lib.rs  parquet_v2.rs  stage.rs
src/meta/app/src/storage/: storage_params.rs
src/query/ast/: Cargo.toml
src/query/ast/src/ast/: query.rs
src/query/ast/src/parser/: mod.rs  query.rs  share.rs  stage.rs  token.rs
src/query/ast/src/visitors/: walk.rs  walk_mut.rs
src/query/catalog/: Cargo.toml
src/query/catalog/src/: catalog.rs  table.rs
src/query/expression/src/kernels/: concat.rs
src/query/formats/: Cargo.toml
src/query/formats/src/: format.rs  format_csv.rs  format_factory.rs  format_ndjson.rs  format_parquet.rs  format_tsv.rs
src/query/formats/src/field_decoder/: row_based.rs  (+1 more)
src/query/pipeline/sources/: Cargo.toml
src/query/service/: Cargo.toml
src/query/sql/tests/: location.rs
src/query/storages/common/parquet/: Cargo.toml
src/query/storages/common/parquet/src/: lib.rs  row_group_reader.rs
src/query/storages/delta/: Cargo.toml
src/query/storages/parquet_v2/: Cargo.toml
src/query/storages/stage/: Cargo.toml
src/query/storages/stage/src/: lib.rs  stage_source.rs  stage_table.rs
tests/suites/1_stateful/00_stage/: 00_0011_distributed_copy_into_table.sh
(+68 files in other folders)
