[package]
name = "common-storages-stage"
version = "0.1.0"
edition = "2021"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false
test = false

[dependencies]
common-catalog = { path = "../../catalog" }
common-datablocks = { path = "../../datablocks" }
common-datavalues = { path = "../../datavalues" }
common-exception = { path = "../../../common/exception" }
common-formats = { path = "../../formats/" }
common-io = { path = "../../../common/io" }
common-meta-app = { path = "../../../meta/app" }
common-meta-types = { path = "../../../meta/types" }
common-pipeline-core = { path = "../../pipeline/core" }
common-pipeline-sinks = { path = "../../pipeline/sinks" }
common-pipeline-sources = { path = "../../pipeline/sources" }
common-pipeline-transforms = { path = "../../pipeline/transforms" }
common-planners = { path = "../../planners" }
common-storage = { path = "../../../common/storage" }
common-storages-util = { path = "../util" }

async-trait = "0.1.56"
futures = "0.3.21"
opendal = { version = "0.14.1", features = ["layers-retry"] }
parking_lot = "0.12.1"
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
typetag = "0.1.8"
tracing = "0.1.35"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
