[package]
name = "storages-common-parquet"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false
test = false

[dependencies]
parquet = "43.0.0"
bytes = "1.4.0"

[build-dependencies]
